Fix layout bug in nav (still buggy)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,27 @@ body {
     background-color: rgb(254, 248, 250);
 }
 
+/* REMOVE PADDING AND NEGATIVE MARGINS FROM CONTAINER TO MAKE IT FIT THE SCREEN  */
+
 .container-fluid {
-    width:100%
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
 }
+
+/* THIS IS AN AI FIX -  IT REMOVES THE NEGATIVE MARGINS FROM THE NESTED COLUMNS - CHECK FOR OVERWRITES */
+.container-fluid > .row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.container-fluid > .row > [class*="col-"] {
+    padding-left: 0;
+    padding-right: 0;
+}
+ /* ------------------------ */
+
 
 /* NAV */
 
@@ -17,12 +35,18 @@ body {
 
 
 .navbox {
-    padding-left: 5px;
     position: fixed;
     z-index: 1000;
-    width:100vw;
-  
-    
+    width: 100%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+}
+
+
+.navbar {
+    padding-right: 20px;
+
+
 }
 
 #menubtn {
@@ -33,14 +57,11 @@ body {
 .navbar-toggler {
     padding: 0;
 }
-.emonav:hover {
-    color: red;
 
-}
 
 /* PAD NAV LINKS */
 .navbar-nav .nav-link {
-    padding:15px
+    padding: 15px
 }
 
 
@@ -52,13 +73,15 @@ body {
     background-position: center -100px;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    
+
 }
 
 .jumbotron {
     margin-bottom: 10px;
     margin-top: 101px
+    
 }
+
 
 
 /* EMOTION SECTION */
@@ -71,7 +94,7 @@ body {
 .emotions h3 {
     margin-bottom: 20px;
     margin-top: 40px;
-    font-size:1.3rem;
+    font-size: 1.3rem;
     font-weight: 100;
     text-align: center;
 }
@@ -80,14 +103,16 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     max-width: 1600px;
-    margin-left:auto;
-    margin-right:auto
+    /* CENTER CONTENT */
+    margin-left: auto;
+    margin-right: auto
 }
 
-#howtext  {
+#howtext {
     margin-bottom: 60px;
     margin-top: 20px;
 }
+
 /* EMOTION CARDS */
 
 .emotions h2 {
@@ -102,7 +127,7 @@ body {
     margin-bottom: 50px;
     box-shadow: 0 5px 9px 0 rgba(59, 59, 59, 0.2);
     background-color: #77a7af24;
-    
+
 
 }
 
@@ -110,7 +135,7 @@ body {
     text-align: center;
     margin: 0 10 10 10px;
     font-size: 0.9rem;
-    
+
 }
 
 /* CARD IMAGE WRAPPERS */
@@ -132,7 +157,7 @@ body {
 
 .cope h3 {
     margin-bottom: 70px;
-    font-size:1.3rem;
+    font-size: 1.3rem;
     font-weight: 100;
     text-align: center;
     line-height: 30px;
@@ -152,26 +177,23 @@ body {
 /* MEDIA QUERY FOR TABLETS AND ABOVE */
 
 @media screen and (min-width: 768px) {
-    
+
 
     /* CHANGE CARUSEL IMAGE WHEN ON TABLET AND ABOVE */
     .car-image-1 {
         content: url("/assets/images/coping-strategies/1.png")
-
     }
 
     .car-image-2 {
         content: url("/assets/images/coping-strategies/3.png")
-
     }
+
     .car-image-3 {
         content: url("/assets/images/coping-strategies/2.png")
-
     }
+
     .car-image-4 {
         content: url("/assets/images/coping-strategies/4.png")
-
     }
 
-  }
-
+}
